--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/character-movement.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-MOVEMENT/character-movement.html
@@ -22,7 +22,7 @@
     <div class="main-page-division">
         <div class="title-container">
             <h1>CharacterMovement</h1>
-            <a class="manual-or-scripting-button" href="../../MANUAL/CHARACTER-MOVEMENT/character-movement.html">Manual</a>
+            <a class="manual-or-scripting-button" href="../../MANUAL/CHARACTER-MOVEMENT/character-movement.html">SWITCH TO MANUAL</a>
         </div>
         <h2>Description</h2>
         <p>
