--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/env-quey.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENV-QUERY/env-quey.html
@@ -22,7 +22,7 @@
     <div class="main-page-division">
         <div class="title-container">
             <h1>CharacterEnvironmentalQuery</h1>
-            <a class="manual-or-scripting-button" href="../../MANUAL/ENV-QUERY/env-query.html">Manual</a>
+            <a class="manual-or-scripting-button" href="../../MANUAL/ENV-QUERY/env-query.html">SWITCH TO MANUAL</a>
         </div>
         <h2>Description</h2>
         <p>
