--- a/2D Controller/HTML/CLASSES/classes.html
+++ b/2D Controller/HTML/CLASSES/classes.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controller Documentation</title>
 
+    <link rel="stylesheet" href="../../CSS/scroll-bar.css">
     <link rel="stylesheet" href="../../CSS/navigation-bar.css">
     <link rel="stylesheet" href="../../CSS/general.css">
     <link rel="stylesheet" href="../../CSS/table.css">
