--- a/2D Controller/HTML/CLASSES/MANUAL/ARMOUR-SO/armour-so.html
+++ b/2D Controller/HTML/CLASSES/MANUAL/ARMOUR-SO/armour-so.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../../../../CSS/navigation-bar.css">
     <link rel="stylesheet" href="../../../../CSS/general.css">
     <link rel="stylesheet" href="../../../../CSS/table.css">
     <link rel="stylesheet" href="../../../../CSS/scroll-bar.css">
@@ -22,7 +21,7 @@
     <div class="main-page-division">
         <div class="title-container">
             <h1>ArmourSO</h1>
-            <a class="manual-or-scripting-button" href="../../SCRIPTING/ARMOUR-SO/armour-so.html">Scripting</a>
+            <a class="manual-or-scripting-button" href="../../SCRIPTING/ARMOUR-SO/armour-so.html">SWITCH TO SCRIPTING</a>
         </div>
     </div>
 </body>
