--- a/2D Controller/HTML/CLASSES/SCRIPTING/ATTACK-SO/attack-so.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ATTACK-SO/attack-so.html
@@ -22,7 +22,7 @@
     <div class="main-page-division">
         <div class="title-container">
             <h1>AttackSO</h1>
-            <a class="manual-or-scripting-button" href="../../MANUAL/ATTACK-SO/attack-so.html">Manual</a>
+            <a class="manual-or-scripting-button" href="../../MANUAL/ATTACK-SO/attack-so.html">SWITCH TO MANUAL</a>
         </div>
         <h2>Description</h2>
         <p>
