--- a/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-DASH/character-dash.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/CHARACTER-DASH/character-dash.html
@@ -22,7 +22,7 @@
     <div class="main-page-division">
         <div class="title-container">
             <h1>CharacterDash</h1>
-            <a class="manual-or-scripting-button" href="../../MANUAL/CHARACTER-DASH/character-dash.html">Manual</a>
+            <a class="manual-or-scripting-button" href="../../MANUAL/CHARACTER-DASH/character-dash.html">SWITCH TO MANUAL</a>
         </div>
         <h2>Dependencies</h2>
         <p>
