--- a/2D Controller/HTML/CLASSES/SCRIPTING/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html
@@ -22,7 +22,7 @@
     <div class="main-page-division">
         <div class="title-container">
             <h1>CombatSystemProjectile</h1>
-            <a class="manual-or-scripting-button" href="../../MANUAL/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html">Manual</a>
+            <a class="manual-or-scripting-button" href="../../MANUAL/COMBAT-SYSTEM-PROJECTILE/combat-system-projectile.html">SWITCH TO MANUAL</a>
         </div>
         <h2>Dependencies</h2>
         <p>
