--- a/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/entity-health.html
+++ b/2D Controller/HTML/CLASSES/SCRIPTING/ENTITY-HEALTH/entity-health.html
@@ -22,7 +22,7 @@
     <div class="main-page-division">
         <div class="title-container">
             <h1>EntityHealth</h1>
-            <a class="manual-or-scripting-button" href="../../MANUAL/ENTITY-HEALTH/entity-health.html">Manual</a>
+            <a class="manual-or-scripting-button" href="../../MANUAL/ENTITY-HEALTH/entity-health.html">SWITCH TO MANUAL</a>
         </div>
         <h2>Description</h2>
         <p>
